Added nav to content area

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- left app menu -->
 
 		     <!-- ui toolbar - this is where the user can change the ui -->         
-          <app-toolbar [ui]="ui"></app-toolbar>
+          <app-toolbar [ui]="ui" [assignments]="assignments" [data]="data"></app-toolbar>
 
 <!-- end left menu -->
 <!-- main app component -->
