--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,29 @@
-<p>
-  content works!
-</p>
+<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12" *ngFor="let c of assignments | keys; let i = index">
+    <div class="contentArea" *ngIf="i==data.value">
+        <h2>{{i}}) {{ c.value.title }}</h2>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title"> Edit {{ c.value.title }} </h3>
+            </div>
+            <div class="panel-body">
+                <div class="input-group" *ngIf="data.value==0">
+                	<span class="input-group-addon">Application title: </span>
+                    <input type="text" class="form-control" placeholder="Enter Planner Title" [(ngModel)]="appTitle" >
+                    <span class="input-group-btn">
+        			<button class="btn btn-default" type="submit" (click)="changeTitle()">Apply</button>
+      				</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--navigation-->
+<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+    <div class="btn-group" role="group" aria-label="...">
+        <button type="button" [ngClass]="{'active': n==data.value}" class="btn btn-default btn-lg" *ngFor="let n of assignments | keys; let i = index" (click)="goToQ(i)">{{ i+1 }}</button>
+    </div>
+    <p></p>
+    <p></p>
+</div>
