--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div role="tabpanel" class="tab-pane fade" id="content">
-                    <app-content [ui]="ui" [assignments]="assignments" [data]="data"></app-content>
+                    <app-content [ui]="ui" [assignments]="assignments" [data]="data" [amount]="amount"></app-content>
                 </div>
                 <div role="tabpanel" class="tab-pane fade" id="settings">...</div>
             </div>
