--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
                 <div class="animated fadeIn box col-md-10 col-lg-10 col-sm-12 col-xs-12">
                     <!--instructions -->
                     <h3 class="animated fadeIn activityTitle" *ngIf="data.value==0" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-calendar-o"></i> {{ data.activity }} </h3>
-                    <app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions" [ui]="ui"></app-instructions>
+                    <app-instructions *ngIf="data.value==0" [data]="data" [instructions]="instructions" [ui]="ui" [assignments]="assignments"></app-instructions>
                     <!-- assignment Info title -->
                     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" *ngIf="data.value>0 && data.value < amount-1">
                         <h2 class="titles pull-left" [ngStyle]="{'color': ui?.subheadings?.color}"><i class="fa fa-file-text-o"></i> Assignment Information</h2>
