--- a/src/app/one-task/one-task.component.html
+++ b/src/app/one-task/one-task.component.html
@@ -1,5 +1,7 @@
 <div class="tasks">
 <div *ngFor="let d of assignments | keys; let i = index">
-  <app-tasks class="taskOne" *ngIf="d.value.type=='one' && i==data.value" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="d.value.taskA.name" [information]="d.value.taskA.information" [d]="d" [ui]="ui"></app-tasks>
+  <div *ngFor="let o of d.value.tasks | keys; let p = index">
+  <app-tasks class="taskOne" *ngIf="d.value.type=='one' && i==data.value" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="o.value.name" [information]="o.value.information" [d]="d" [ui]="ui"></app-tasks>
+  </div>
 </div>
 </div>
