--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <div class="leftMenu">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
         <h2><strong>Planner Custom Editor</strong></h2>
