--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,6 +88,15 @@ p, span, ul li{
 	border: 1px solid $red;
 }
 
+.circleComp{
+	@include buttonStyles(50px, 50px,  100px, subHeadings);
+	cursor: pointer;
+	text-align: center;
+	font-size: 2.2em;
+	font-weight: lighter;
+	border-style: solid;
+}
+
 .specialCircle{
 	@include buttonStyles(50px, 50px, 100px, subHeadings);
 	cursor: default;
