--- a/src/app/multi-tasks/multi-tasks.component.html
+++ b/src/app/multi-tasks/multi-tasks.component.html
@@ -1,8 +1,15 @@
 <div *ngFor="let d of assignments | keys; let i = index">
-    <div class="twoTasks" *ngIf="d.value.type=='two' && i==data.value">
-        <div *ngFor="let t of d.value.tasks | keys; let k = index" class="taskA col-sm-12 col-xs-12 col-lg-6 col-md-6">
-            <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.value.name" [ui]="ui" [information]="t.value.information"></app-tasks>
-            <app-select [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [t]="t" [d]="d" [index]="k" [ui]="ui"></app-select>
+    <div class="twoTasks" *ngIf="d.value.type=='task' && i==data.value">
+        <div *ngFor="let t of d.value.tasks | keys; let k = index" class="taskA">
+        <!-- multiple tasks -->
+            <div class="multipleTasks" *ngIf="d.value.tasks.length>1" class="col-sm-12 col-xs-12 col-lg-6 col-md-6">
+                <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.value.name" [ui]="ui" [information]="t.value.information"></app-tasks>
+                <app-select [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [t]="t" [d]="d" [index]="k" [ui]="ui"></app-select>
+            </div>
+         <!-- one task -->
+            <div class="oneTasks" *ngIf="d.value.tasks.length==1" class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
+                <app-tasks class="tasks" [data]="data" [assignments]="assignments" [amount]="amount" [value]="value" [title]="t.value.name" [ui]="ui" [information]="t.value.information"></app-tasks>
+            </div>
         </div>
     </div>
 </div>
