--- a/src/app/print/print.component.html
+++ b/src/app/print/print.component.html
@@ -6,8 +6,7 @@
         <!-- <img [src]="imageSrc(d.value.due_date)" class="img-responsive imageSize col-md-3 col-lg-3 col-sm-12 col-xs-12" /> -->
         <app-custom-date [value]="i" [amount]="amount" [assignments]="assignments" class="col-md-3 col-lg-3 hidden-sm hidden-xs"></app-custom-date>
         <div *ngFor="let t of d.value.tasks | keys">
-            <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
-            <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="d.value.tasks.length==1" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
+            <p class="text col-md-9 col-lg-9 col-sm-12 col-xs-12" *ngIf="t.value.select==true || d.value.tasks.length==1" [ngStyle]="{'color': ui?.text?.color}"><b>{{ t.value.name }}</b>: {{ t.value.information }}</p>
         </div>
     </div>
 </li>
